--- a/pom.xml
+++ b/pom.xml
@@ -53,18 +53,18 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
-
+<!-- Camel Context, Basic Components ContainerRegistry -->
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-spring-boot-starter</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-web</artifactId>-->
 
 
-        </dependency>
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
