--- a/pom.xml
+++ b/pom.xml
@@ -59,12 +59,12 @@
             <artifactId>camel-spring-boot-starter</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-web</artifactId>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
 
 
-<!--        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
