avro kafka not fixed yet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=camel-spring-boot-integration-demo
 camel.main.run-controller=true
+
+camel.component.kafka.brokers=localhost:19092,localhost:19093,localhost:19094
+camel.component.kafka.keySerializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+camel.component.kafka.valueSerializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+camel.component.kafka.schemaRegistryURL=http://localhost:8081
