Day 5 covering all the integration patterns

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
 spring.application.name=camel-spring-boot-integration-demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/camel_db
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.hikari.auto-commit=false
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+
 camel.main.run-controller=true
 
+auto.create.topics.enable=true
 camel.component.kafka.brokers=localhost:19092,localhost:19093,localhost:19094
+
 #camel.component.kafka.keySerializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 #camel.component.kafka.valueSerializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 camel.component.kafka.schemaRegistryURL=http://localhost:8081
