--- a/podman/docker-compose.yaml
+++ b/podman/docker-compose.yaml
@@ -25,6 +25,7 @@ services:
         KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
         KAFKA_NUM_PARTITIONS: 3
+        KAFKA_AUTO_CREATE_TOPICS_ENABLE: false
     depends_on:
       - zookeeper
 
@@ -45,6 +46,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_NUM_PARTITIONS: 3
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: false
     depends_on:
       - zookeeper
 
@@ -64,6 +66,7 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: false
       KAFKA_NUM_PARTITIONS: 3
     depends_on:
       - zookeeper
